syntax = "proto3";
package osmosis.superfluid;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/osmosis-labs/osmosis/x/superfluid/types";

enum SuperfluidAssetType {
  option (gogoproto.goproto_enum_prefix) = false;

  // TODO: what superfluid asset types will be here?
  SuperfluidAssetTypeNative = 0;
  SuperfluidAssetTypeLPShare = 1;
  // SuperfluidAssetTypeLendingShare = 2; // for now not exist
}

// SuperfluidAsset stores the pair of superfluid asset type and denom pair
message SuperfluidAsset {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;

  string denom = 1;
  SuperfluidAssetType asset_type = 2;
}

// SuperfluidAssetInfo stores the information of superfluid asset - real time changes
message SuperfluidAssetInfo {
  string denom = 1;
  uint64 superfluid_asset_id = 2;
  string total_staked_amount = 3 [ 
    (gogoproto.moretags) = "yaml:\"total_staked_amount\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string risk_adjusted_osmo_equivalent = 4 [
    (gogoproto.moretags) = "yaml:\"risk_adjusted_osmo_equivalent\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
